<resources>
    <string name="app_name">PeopleGatchiMon</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="inventory">Inventory</string>
    <string name="create_a_character">Create a Character:</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="play_again">play again?</string>
    <string name="education_is_the_key">Education is the key \n to unlocking your poke-tential.</string>
    <string name="science">Science</string>
    <string name="math">Math</string>
    <string name="philosophy">Philosophy</string>
    <string name="go_to_work">Clear eyes \n full heart \n go to work.</string>
    <string name="manual_labor">Manual Labor</string>
    <string name="engineer">Engineer</string>
    <string name="scientist">Scientist</string>
    <string name="philospher">Philospher</string>
    <string name="store">Store</string>
    <string name="female">cis female</string>
    <string name="male">cis male</string>
    <string name="non_conforming">non-conforming</string>
    <string name="philosophy_score">"Your Philosophy Score is: "</string>
    <string name="maths_score">"Your Maths score is: "</string>
    <string name="science_score">"Your Science score is: "</string>
    <string name="hungry_message">Your baby is super hungry!\n Go feed them!</string>
    <string name="bathroom_message">Your baby really needs to go!\n Let them go to the bathroom!</string>
    <string name="pee_message">Your baby needs to tinkle! \n Let them pee!</string>
    <string name="bathe_message">Your baby is filthy!\n Bathe them!</string>
    <string name="thirsty_message">Your sweet baby needs a drink!\n Don\'t let them go thirsty!</string>
    <string name="sleepy_message">Your baby needs a nap!\n Put them to bed!</string>
    <string name="fed_message">Your stomach thanks you, but now you may need to use the bathroom and sleep. Don\'t forget to wash your hands!</string>
    <string name="fed_message_2">Beeelch!! Uhg, I\'m stuffed..</string>
    <string name="drank_message">Your thirst has been quenched, but now you may need to use the bathroom. Don\'t forget to wash your hands!</string>
    <string name="drank_message_2">Slurp, Slurp, Mmmm..</string>
    <string name="slept_message">You\'re now well rested but, there are probably a few other things that need your attention too!</string>
    <string name="slept_message_2">Yawn.. That was a good nap.</string>
    <string name="bathed_message">You cant get any cleaner..!</string>
    <string name="bathed_message_2">Yay, so fresh and so clean clean!!</string>
    <string name="peed_message">Your pee bladder thanks you, but you may now be thirsty. Don\'t forget to wash your hands!</string>
    <string name="peed_message_2">Whew, my eyes were floating!</string>
    <string name="pood_message">Holy Cow! That was a sweet sweet #2!! However, now you\'re getting hungry. Don\'t forget to wash your hands!</string>
    <string name="pooed_message_2">Your poo bladder thanks you, but now you may be hungry. Don\'t forget to wash your hands!</string>
    <string name="need_2_hunger">You are not hungry enough to eat this \n You need 2 hunger</string>
    <string name="need_3_hunger">You are not hungry enough to eat this \n You need 3 hunger</string>
    <string name="use_bathroom">You have to use the bathroom too bad to use this item</string>
    <string name="need_4_hunger">You are not hungry enough to eat this \n You need 4 hunger</string>
    <string name="need_5_hunger">You are not hungry enough to eat this \n You need 5 hunger</string>
    <string name="need_6_hunger">You are not hungry enough to eat this \n You need 6 hunger</string>
    <string name="need_7_hunger">You are not hungry enough to eat this \n You need 7 hunger</string>
    <string name="need_9_hunger">You are not hungry enough to eat this \n You need 9 hunger</string>
    <string name="unable_to_use">Unable to use this item, please try again</string>
    <string name="need_10_hunger">You are not hungry enough to eat this \n You need 10 hunger</string>
    <string name="need_12_hunger">You are not hungry enough to eat this \n You need 12 hunger</string>
    <string name="need_15_hunger">You are not hungry enough to eat this \n You need 15 hunger</string>
    <string name="need_2_thirst">You are not thirsty enough to drink this \n You need 2 thirst</string>
    <string name="need_4_thirst">You are not thirsty enough to drink this \n You need 4 thirst</string>
    <string name="need_5_thirst">You are not thirsty enough to drink this \n You need 5 thirst</string>
</resources>
