<?xml version="1.0" encoding="utf-8"?>
<com.PeopleGatchi.Views.LoginView xmlns:android="http://schemas.android.com/apk/res/android"
                                  android:orientation="vertical"
                                  android:layout_width="match_parent"
                                  android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/userNameField"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal"/>
</com.PeopleGatchi.Views.LoginView>